@@ -11,6 +11,11 @@
 	* src/report/report-system/report-utilities.scm: had the wrong
 	  number of arguments in gnc:account-get-balance-at-date.
 
+	* src/report/standard-reports/balance-sheet.scm: add some
+	  (commented out) code to support a start date for computing the
+	  Net Income (aka Net Profit) in the Balance Sheet.  This is
+	  a commented-out partial fix for #113196.
+	
 2003-05-22  Derek Atkins  <derek@ihtfp.com>
 
 	* src/business/business-reports/owner-report.scm:  Better fix for 108731
